--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         </main>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="footer-container">
                 <div class="footer__contact">
                     <h1 class="footer__title">
@@ -213,7 +213,7 @@
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
